--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,20 @@
-body {
-    min-height: 75rem;
-    padding-top: 4.5rem;
+html {
+font-size: 14px;
 }
-  
-.navbar {
-    margin-bottom: 20px;
+@media (min-width: 768px) {
+html {
+    font-size: 16px;
+}
+}
+
+.container {
+width: 700px;
+}
+
+.card-deck .card {
+min-width: 220px;
+}
+
+.form-control-borderless {
+    border: none;
 }
