--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,34 @@
-.ajax-loader {
-    visibility: hidden;
-    background-color: rgba(255,255,255,0.7);
-    position: absolute;
-    z-index: +100 !important;
-    width: 100%;
-    height:100%;
-  }
-  
-  .ajax-loader img {
-    position: relative;
-    top:50%;
-    left:50%;
-  }
+.blink {
+    -webkit-animation: blink 1s;
+    -webkit-animation-iteration-count: infinite;
+    animation: blink 1s;
+    animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
